--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,30 @@ export(get_na_replace_defs)
 export(get_renamed_colnames)
 export(list_to_dataframe)
 export(manifest_download)
+export(mod_dataset_selection_server)
+export(mod_dataset_selection_ui)
+export(mod_datatable_dashboard_server)
+export(mod_datatable_dashboard_ui)
+export(mod_datatable_filters_server)
+export(mod_datatable_filters_ui)
+export(mod_distribution_server)
+export(mod_distribution_ui)
+export(mod_file_selection_server)
+export(mod_file_selection_ui)
+export(mod_highlight_datatable_server)
+export(mod_highlight_datatable_ui)
+export(mod_scheduler_server)
+export(mod_scheduler_ui)
+export(mod_select_storage_project_server)
+export(mod_select_storage_project_ui)
+export(mod_stacked_bar_server)
+export(mod_stacked_bar_ui)
+export(mod_submit_model_server)
+export(mod_submit_model_ui)
+export(mod_tabbed_dashboard_server)
+export(mod_tabbed_dashboard_ui)
+export(mod_update_data_flow_status_server)
+export(mod_update_data_flow_status_ui)
 export(model_submit)
 export(prep_manifest_dash)
 export(prep_manifest_dfa)
