--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,7 +42,6 @@ export(prep_manifest_dash)
 export(prep_manifest_dfa)
 export(prep_manifest_submit)
 export(rearrange_dataframe)
-export(run_app)
 export(storage_project_datasets)
 export(storage_project_manifests)
 export(storage_projects)
@@ -50,13 +49,7 @@ export(style_dashboard)
 export(true_false_icon)
 export(update_data_flow_manifest)
 export(update_dfs_manifest)
-import(shiny)
-importFrom(golem,activate_js)
-importFrom(golem,add_resource_path)
-importFrom(golem,bundle_resources)
-importFrom(golem,favicon)
-importFrom(golem,with_golem_options)
+export(visualize_component)
 importFrom(magrittr,"%>%")
 importFrom(shiny,NS)
-importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
