--- a/.github/workflows/devtools_tests.yml
+++ b/.github/workflows/devtools_tests.yml
@@ -6,6 +6,10 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
+     - name: Install System Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pip libcurl4-openssl-dev
       - uses: actions/checkout@v3
 
       - uses: r-lib/actions/setup-pandoc@v2
