use R package gh action

--- a/.github/workflows/devtools_tests.yml
+++ b/.github/workflows/devtools_tests.yml
@@ -1,48 +1,31 @@
 name: Devtools Tests
-on: [push]
+on:
+  push:
+    branches:
+      - main
+      - dev*
+  pull_request:
+    branches:
+      - main
+      - dev*
 jobs:
-  devtools-tests:
-    runs-on: ubuntu-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+  build:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        r-version: ['3.6.3', '4.1.1']
+
     steps:
-      - name: Install System Dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y pip libcurl4-openssl-dev
       - uses: actions/checkout@v3
-
-      - uses: r-lib/actions/setup-pandoc@v2
-
-      - uses: r-lib/actions/setup-r@v2
+      - name: Set up R ${{ matrix.r-version }}
+        uses: r-lib/actions/setup-r@f57f1301a053485946083d7a45022b278929a78a
         with:
-          use-public-rspm: true
-
-      - uses: r-lib/actions/setup-renv@v2
-
-      - name: Create and Activate Python Virtual Environment
-        shell: bash
+          r-version: ${{ matrix.r-version }}
+      - name: Install dependencies
         run: |
-          python3 -m venv .venv
-          chmod 755 .venv/bin/activate
-          source .venv/bin/activate
-            
-      - name: Create Oauth Config
+          install.packages(c("remotes", "rcmdcheck"))
+          remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
-        run: |
-          config <- "client_id: ${{ secrets.OAUTH_CLIENT_ID }}"
-          config <- c(config, "client_secret: ${{ secrets.OAUTH_CLIENT_SECRET }}")
-          appUrl<- "http://127.0.0.1:3978"
-          config <- c(config, sprintf("app_url: %s", appUrl))
-         
-          configFileConn<-file("oauth_config.yml")
-          tryCatch(
-             writeLines(config, configFileConn),
-             finally=close(configFileConn)
-          )
-
-      - name: Run tests
+      - name: Check
+        run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
         shell: Rscript {0}
-        run: |
-          install.packages("devtools")
-          devtools::test()
