--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Loren", "Wolfe", , "loren.wolfe@sagebase.org", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-License: 
+License: MIT + file LICENSE 
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
