--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,23 @@ Package: dfamodules
 Title: Modules for the Data Flow App
 Version: 0.0.0.9000
 Authors@R: 
-    person("Loren", "Wolfe", , "loren.wolfe@sagebase.org", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+    person("Loren", "Wolfe", email = "loren.wolfe@sagebase.org", role = c("aut", "cre"))
+Description: Modules and functions for the Data Flow App.
+Suggests: 
+    testthat,
+    renv,
+    devtools,
+    usethis
 License: MIT + file LICENSE 
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
+Imports: 
+    DT,
+    htmltools,
+    magrittr,
+    purrr,
+    rlang,
+    shiny,
+    shinydashboard,
+    waiter
