add more packages to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,10 @@ export(true_false_icon)
 export(update_data_flow_manifest)
 export(update_dfs_manifest)
 export(visualize_component)
+importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(shiny,NS)
 importFrom(shiny,tagList)
+importFrom(shinyjs,disable)
+importFrom(shinyjs,enable)
+importFrom(shinyjs,useShinyjs)
