--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,11 +14,17 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
 Imports: 
+    dplyr,
     DT,
+    ggplot2,
+    glue,
     htmltools,
+    httr,
+    jsonlite,
     magrittr,
     purrr,
     rlang,
     shiny,
     shinydashboard,
+    shinyjs,
     waiter
