--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(calculate_items_per_manifest)
 export(convert_column_type)
 export(create_dashboard)
+export(dataset_manifest_download)
 export(dt_replace_na)
 export(generate_data_flow_manifest_skeleton)
 export(get_all_manifests)
@@ -12,7 +13,6 @@ export(get_na_replace_colnames)
 export(get_na_replace_defs)
 export(get_renamed_colnames)
 export(list_to_dataframe)
-export(manifest_download)
 export(mod_dataset_selection_server)
 export(mod_dataset_selection_ui)
 export(mod_datatable_dashboard_server)
