--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calculate_items_per_manifest)
 export(convert_column_type)
 export(create_dashboard)
 export(dt_replace_na)
+export(generate_dashboard_config)
 export(generate_data_flow_manifest_skeleton)
 export(get_all_manifests)
 export(get_colname_by_type)
