--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,9 @@ export(convert_column_type)
 export(create_dashboard)
 export(dataset_manifest_download)
 export(dt_replace_na)
+export(fill_dataflow_manifest)
 export(generate_dashboard_config)
-export(generate_data_flow_manifest_skeleton)
+export(generate_dataflow_manifest)
 export(get_all_manifests)
 export(get_colname_by_type)
 export(get_na_replace_colnames)
