add new modules to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(get_na_replace_colnames)
 export(get_na_replace_defs)
 export(get_renamed_colnames)
 export(list_to_dataframe)
+export(mod_dashboard_filters_server)
+export(mod_dashboard_filters_ui)
 export(mod_dataset_selection_server)
 export(mod_dataset_selection_ui)
 export(mod_datatable_dashboard_server)
