--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,4 +11,5 @@ repos:
 -   repo: https://github.com/lorenzwalthert/precommit
     rev: v0.3.2.9019
     hooks:
-    -   id: roxygenize
+    -   id: parsable-R
+    -   id: style-files
