--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -68,5 +68,5 @@ repos:
         language: fail
         files: '\.(Rhistory|RData|Rds|rds)$'
         # `exclude: <regex>` to allow committing specific files
-#- ci:
-#    autoupdate_schedule: monthly
+ci:
+    autoupdate_schedule: monthly
