--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(mod_highlight_datatable_server)
 export(mod_highlight_datatable_ui)
 export(mod_scheduler_server)
 export(mod_scheduler_ui)
+export(mod_select_dcc_server)
+export(mod_select_dcc_ui)
 export(mod_select_storage_project_server)
 export(mod_select_storage_project_ui)
 export(mod_stacked_bar_server)
@@ -47,6 +49,7 @@ export(storage_project_datasets)
 export(storage_project_manifests)
 export(storage_projects)
 export(style_dashboard)
+export(synapse_access)
 export(true_false_icon)
 export(update_data_flow_manifest)
 export(update_dfs_manifest)
