--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(style_dashboard)
 export(synapse_access)
 export(true_false_icon)
 export(update_data_flow_manifest)
+export(verbose_message)
 export(visualize_component)
 importFrom(glue,glue)
 importFrom(lubridate,"%m+%")
