--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(get_na_replace_colnames)
 export(get_na_replace_defs)
 export(get_renamed_colnames)
 export(list_to_dataframe)
+export(manifest_download)
 export(mod_administrator_widgets_server)
 export(mod_administrator_widgets_ui)
 export(mod_dataset_selection_server)
