write function that gets annotations using synapse API

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(fill_dataflow_manifest)
 export(generate_dashboard_config)
 export(generate_dataflow_manifest)
 export(get_all_manifests)
+export(get_annotations)
 export(get_colname_by_type)
 export(get_na_replace_colnames)
 export(get_na_replace_defs)
@@ -51,6 +52,7 @@ export(storage_project_manifests)
 export(storage_projects)
 export(style_dashboard)
 export(synapse_access)
+export(synapse_annotations)
 export(true_false_icon)
 export(update_data_flow_manifest)
 export(verbose_message)
