write synapse permissions endpoint function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(storage_projects)
 export(style_dashboard)
 export(synapse_access)
 export(synapse_annotations)
+export(synapse_permissions)
 export(true_false_icon)
 export(update_data_flow_manifest)
 export(verbose_message)
